zimbra-iptables.conf
*filter
#############################################
### CHANGE CHAIN'S DEFAULT POLICY TO DROP ###
#############################################
# https://www.systemmen.com/mail-server/zimbra/configure-iptables-firewall-for-zimbra-mail-server-354.html
-P INPUT DROP
-P FORWARD DROP
-P OUTPUT DROP
############################
#####                   ####
##### WHITE LIST IP SSH ####
#####                   ####
############################
### ALLOW SSH FROM OFFICE's IP ###
##################################
-A INPUT -m tcp -p tcp --dport 22 -j ACCEPT
-A OUTPUT -m tcp -p tcp --sport 22 -j ACCEPT
###############################
#####                     #####
##### BLOCK COMMON ATTACK #####
#####                     #####
###############################
### Force SYN packets check ###
### Make sure NEW incoming tcp connections are SYN packets; otherwise we need to drop them ###
##############################################################################################
-A INPUT -p tcp ! --syn -m state --state NEW -j DROP
### Packets with incoming fragments drop them. ###
### This attack result into Linux server panic such data loss ###
#################################################################
-A INPUT -f -j DROP
-A INPUT -p tcp --tcp-flags ALL FIN,URG,PSH -j DROP
-A INPUT -p tcp --tcp-flags ALL ALL -j DROP
### Incoming malformed XMAS packets drop them ###
#################################################
-A INPUT -p tcp --tcp-flags SYN,FIN SYN,FIN -m limit --limit 5/m --limit-burst 7 -j LOG --log-prefix " XMAS Packets "
-A INPUT -p tcp --tcp-flags SYN,FIN SYN,FIN -j DROP
### Drop all NULL packets ###
#############################
-A INPUT -p tcp --tcp-flags ALL NONE -m limit --limit 5/m --limit-burst 7 -j LOG --log-prefix " NULL Packets "
-A INPUT -p tcp --tcp-flags ALL NONE -j DROP
-A INPUT -p tcp --tcp-flags SYN,RST SYN,RST -j DROP
### Drop FIN packet scans ###
#############################
-A INPUT -p tcp --tcp-flags FIN,ACK FIN -m limit --limit 5/m --limit-burst 7 -j LOG --log-prefix " Fin Packets Scan "
-A INPUT -p tcp --tcp-flags FIN,ACK FIN -j DROP
-A INPUT -p tcp --tcp-flags ALL SYN,RST,ACK,FIN,URG -j DROP
### Log and get rid of broadcast / multicast and invalid ###
############################################################
-A INPUT -m pkttype --pkt-type broadcast -j LOG --log-prefix " Broadcast "
-A INPUT -m pkttype --pkt-type broadcast -j DROP
-A INPUT -m pkttype --pkt-type multicast -j LOG --log-prefix " Multicast "
-A INPUT -m pkttype --pkt-type multicast -j DROP
-A INPUT -m state --state INVALID -j LOG --log-prefix " Invalid "
-A INPUT -m state --state INVALID -j DROP
### REJECT CONNECTIONS ABOVE 30 FROM ONE SOURCE IP ###
######################################################
-A INPUT -p tcp --syn --dport 80 -m connlimit --connlimit-above 100 --connlimit-mask 32 -j REJECT --reject-with tcp-reset
-A INPUT -p tcp --syn --dport 443 -m connlimit --connlimit-above 100 --connlimit-mask 32 -j REJECT --reject-with tcp-reset
### ALLOW 150 NEW CONNECTIONS (PACKETS) PER SECOND ###
######################################################
-A INPUT -m state --state ESTABLISHED,RELATED -m limit --limit 150/second --limit-burst 160 -j ACCEPT
-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
##############################
